<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sleep"
            android:icon="@drawable/ic_moon"
            android:title="@string/when_sleep" />
        <item
            android:id="@+id/nav_wake"
            android:icon="@drawable/ic_sun"
            android:title="@string/when_wake" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_alarm_clock"
            android:title="@string/alarm" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" >
        </item>
    </group>
</menu>