<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sleep">

    <fragment
        android:id="@+id/nav_sleep"
        android:name="com.example.Sleepy.ui.sleep.SleepFragment"
        android:label="@string/when_sleep"
        tools:layout="@layout/fragment_sleep" />

    <fragment
        android:id="@+id/nav_wake"
        android:name="com.example.Sleepy.ui.wake.WakeFragment"
        android:label="@string/when_wake"
        tools:layout="@layout/fragment_wake" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.Sleepy.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_alarm"
        android:name="com.example.Sleepy.ui.alarm.AlarmFragment"
        android:label="@string/alarm"
        tools:layout="@layout/fragment_alarm" />
</navigation>